<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_password_background_user">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/login_signup_logo_user"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_link_sent"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/login_signup_heading_separator_user"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_reset_link_sent"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"/>


                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sucsesfully_to_your_registered"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"/>


                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"/>


                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_check_the_same"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"/>


                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_your_password"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"/>


            </LinearLayout>


        </LinearLayout>



        <RelativeLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_red_background"
            android:padding="5dp">


            <ImageView
                android:id="@+id/iv_login_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/login_signup_signup_btn_ellipse_icon_user" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/click_to_login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold" />

            </RelativeLayout>


        </RelativeLayout>





    </LinearLayout>


</LinearLayout>